# hyper_python

./: README.md  pyproject.toml
hyper2_python/: pyproject.toml
hyper2_python/hyper2_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
hyperMod-python/: .pyproject.toml.swp
tests/: test_hypermod_python.py
