[tool.poetry]
name = "hyper_python"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["GoranBeast7 <hadzinikolovg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
