[tool.poetry]
name = "hyper2_python"
version = "0.1.0"
description = ""
authors = ["GoranBeast7 <hadzinikolovg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.scripts]
test='hyper2_python.test:main'
test1='hyper2_python.wikiAPi:main'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
